--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 ﻿<!DOCTYPE html>
-<html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="utf-8" />
+    <script type="text/javascript" src="xmlLab.js"></script>
+	<link rel="stylesheet" type="text/css" href="xmlLabCSS.css">
     <title></title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-    <link rel="stylesheet" type="text/css" href="xmlLabCSS.css" />
 </head>
 <body>
-    <input class="button" type=button onclick='saveParameters()' value="Save xml" />
-    <a href="" class="hidden" id="linkToOutputXML" hidden="hidden"></a>
-    <input class="button" type=button onclick='showParameterSettings()' value="Add" />
-    <script src='xmlLab.js' type='text/javascript'></script>
-    <div id="newParameter">
+    <input class="button" id="DownloadButton" type=button onclick="downloadThis('output.xml', 'xml/plain')" value="Save xml" />
+    <a href="" class="hidden" id="linkToFile" hidden="hidden"></a>
+    <input class="button" id="AddButton" type=button onclick="addParam()" value="Add" />
+    <div id="NewParameter" hidden = "hidden">
         <label class="parameterSettings">ID: </label>
-        <input class="parameterSettings" id="parameterID" type="text" /> <br />
+        <input class="parameterSettings" id="NewId" type="text" value="id" /> <br />
         <label class="parameterSettings">Name: </label>
-        <input class="parameterSettings" id="parameterName" type="text" /> <br />
+        <input class="parameterSettings" id="NewName" type="text" value="name" /> <br />
         <label class="parameterSettings">Description: </label>
-        <input class="parameterSettings" id="parameterDescription" type="text" /> <br />
+        <input class="parameterSettings" id="NewDescription" type="text" value="description" /> <br />
         <label class="parameterSettings">Type: </label>
-        <select class="parameterSettings" id="parameterType" onchange="setInputType()">
-            <option selected>String</option>
-            <option>Integer</option>
-            <option>Boolean</option>
+        <select class="parameterSettings" id="NewType" name="ComboBox" onchange="changeType()">
+							<option value="0">String</option>
+							<option value="1">Int32</option>
+							<option value="2">Boolean</option>
         </select> <br />
         <label class="parameterSettings">Value: </label>
-        <input class="parameterSettings" id="parameterValue" type="text" /> <br />
-        <input class="button" type=button onclick='cancelNewParameter()' value="Cancel" />
-        <input class="button" type=button onclick='showNewParameter()' value="Save" />
+        <input class="parameterSettings" id="NewValue" type="text" /> <br />
+        <input class="button" id="CancelButton" type=button onclick="cancelParam()" value="Cancel" />
+        <input class="button" id="SaveButton" type=button onclick="saveParam()" value="Save" />
     </div>
+    <div id="Content"></div>
 </body>
 </html>
